fix bottom padding in inventory on mobile

--- a/react-frontend/src/assets/css/style.styl
+++ b/react-frontend/src/assets/css/style.styl
@@ -546,22 +546,22 @@ td.prob
 .inventory-container-crypt
   height: calc(100vh - 183px)
   @media (max-width: 767px)
-    height: calc(100vh - 160px)
+    height: calc(100vh - 132px)
 
 .inventory-container-library
   height: calc(100vh - 225px)
   @media (max-width: 767px)
-    height: calc(100vh - 204px)
+    height: calc(100vh - 174px)
 
 .inventory-container-crypt-with-compact
   height: calc(100vh - 245px)
   @media (max-width: 767px)
-    height: calc(100vh - 206px)
+    height: calc(100vh - 177px)
 
 .inventory-container-library-with-compact
   height: calc(100vh - 286px)
   @media (max-width: 767px)
-    height: calc(100vh - 247px)
+    height: calc(100vh - 219px)
 
 .inventory-crypt-table,
 .inventory-library-table
